made the tabbar into a row instead of column. Removed the cloning of json data to using requireJs.

--- a/src/Styles/tabs.css
+++ b/src/Styles/tabs.css
@@ -1,17 +1,20 @@
 .tab-container{
-    border-bottom: 1px solid #ccc;
     scrollbar-width: none;
-
 }
+.tab-container::-webkit-scrollbar {
+    display: none;
+    /* for Chrome, Safari, and Opera */
+}
+
+
 .tab,
 .active-tab {
     border: 1px solid #ccc;
     height:48px;
     padding: 0 2em;
     font-size: 12px;
-    margin:-1px;
-   
 }
+
 
 .active-tab{
     border-top: 3px solid blue;
