--- a/src/Styles/tabs.css
+++ b/src/Styles/tabs.css
@@ -13,6 +13,9 @@
     height:48px;
     padding: 0 2em;
     font-size: 12px;
+    justify-content: center;
+    align-items: center;
+    display:flex;
 }
 
 
